check in rangers.ts for nart

--- a/.templates/js.html
+++ b/.templates/js.html
@@ -130,7 +130,10 @@
 				: [ urls ];
 
 			for(var i=0; i<queue.length; i++){
-				const url = queue[i];
+				let url = queue[i];
+				if(url[0] === '/'){
+					url = location.origin + url;
+				}
 				if(["css"].includes(url.split('.').pop()) ){
 					await appendStyleSheet(url);
 					continue;
@@ -154,6 +157,9 @@
 				: [ urls ];
 
 			const promisedQueue = queue.map(url => {
+				if(url[0] === '/'){
+					url = location.origin + url;
+				}
 				if(Array.isArray(url)) return window.appendUrls(url);
 
 				if(["css"].includes(url.split('.').pop()) ){
