update supported languages and many templates (add attribution)

--- a/.templates/wat.html
+++ b/.templates/wat.html
@@ -1,3 +1,8 @@
+<!--
+uses https://www.npmjs.com/package/wabt (from unpkg)
+https://github.com/AssemblyScript/wabt.js
+-->
+
 <!doctype html>
 <html lang="en" id="html">
   <head>
