more template updating

--- a/.templates/heic.html
+++ b/.templates/heic.html
@@ -1,3 +1,6 @@
+<!--
+use: https://alexcorvi.github.io/heic2any/
+-->
 <style>
 	::-webkit-scrollbar { width: 5px; }
 	::-webkit-scrollbar-track { background: transparent; }
