--- a/.templates/jp2.html
+++ b/.templates/jp2.html
@@ -1,3 +1,7 @@
+<!--
+use?: https://github.com/kripken/j2k.js
+-->
+
 <style>
 	::-webkit-scrollbar { width: 5px; }
 	::-webkit-scrollbar-track { background: transparent; }
