--- a/.templates/tga.html
+++ b/.templates/tga.html
@@ -1,3 +1,7 @@
+<!--
+use https://github.com/schmittl/tgajs
+-->
+
 <style>
 	::-webkit-scrollbar { width: 5px; }
 	::-webkit-scrollbar-track { background: transparent; }
@@ -18,7 +22,7 @@
 <body></body>
 
 <script>
-		function checkImageSupport(){
+	function checkImageSupport(){
 		if(document.querySelector('picture').clientHeight > 1) return;
 
 		console.error(`Image is not supported in this browser, should create a message that says so in DOM!`);
