--- a/handlebars.html
+++ b/handlebars.html
@@ -30,6 +30,17 @@
 		import handlebars from 'https://cdn.skypack.dev/handlebars';
 		import { importCSS, consoleHelper, htmlToElement } from './.tools/misc.mjs'
 		consoleHelper();
+		
+		console.log(`
+- ins and outs totals
+- circle for tickets amount
+- make sure dates are right
+- make sure things are centered which need be
+- map search results row
+- cleanup columns disclaimer
+- don't break in between grouped rows
+- make module
+		`);
 
 		(async () => {
 			const source = await (await fetch('./handlebars.noms.hbs')).text();
@@ -46,10 +57,109 @@
 				}],
 				"rows":100
 			};
+			
+			const userNameMapper = (row) => [
+				'carrierConfirmationBy',
+				'touchedBy',
+				'createdBy',
+				'tankageConfirmationBy',
+				'shipperConfirmationBy',
+				'supplierConsigneeConfirmationBy',
+			].forEach((key) => {
+				row[key] = row[key] && row[key].fullName ? row[key].fullName : ''
+			});
+			
+			const dateMapper = (row) => {
+				const dateKeys = [
+					'expirationDate',
+					'startDate',
+					'stopDate',
+					'ticketDate',
+					'touchedOn',
+					'projectedDate',
+					'expirationDate',
+					'createdDate',
+					'requestedDate',
+					'batchCreatedDate',
+					'scheduledDate',
+					'carrierConfirmationDate',
+					'supplierConsigneeConfirmationDate',
+					'tankageConfirmationDate',
+					'shipperConfirmationDate',
+				]
+				dateKeys.forEach((x) => {
+					try {
+						if (!row[x]) return
+						const value = row[x]
+						let [date, time] = value.toString().split('T')
+						if (!date || !time) return
+						const [year, month, day] = date.split('-')
+						date = [Number(month), Number(day), year.split('').slice(2).join('')].join('/')
+						time = time
+							.split(':')
+							.slice(0, 2)
+							.map((x) => Number(x))
+						let ampm = 'AM'
+						if (time[0] > 12) {
+							ampm = 'PM'
+							time[0] -= 12
+						}
+						if (time[0] === 12) {
+							ampm = 'PM'
+						}
+						if (time[0] === 0) {
+							time[0] = 12
+						}
+						time[1] = time[1].toString().padStart(2, '0')
+						time = time.join(':')
+						if (time === '12:00' && ampm === 'AM') {
+							time = ''
+							ampm = ''
+						}
+						row[x] = [date, time, ampm].join(' ')
+					} catch (e) {
+						console.log(e)
+						console.log(`Problem formatting date for ${x} field, value = ${row[x]}`)
+					}
+					return
+				})
+			};
+			
+			const groupNoms = (row, i, all) => {
+				if(i>0 && (i==1 || !all[i-1].class?.includes('even'))){
+					row.class = row.class || '';
+					row.class = [...row.class.split(" "), "even"].join(" ");
+				}
+				const nextRow = all[i+1];
+				if(nextRow && nextRow.carrierBatchCode === row.carrierBatchCode) return;
 
-			nomsData.items.forEach(i => {
+				let grouped = [];
+				for(var n=0; all[i-n] && all[i-n].carrierBatchCode === row.carrierBatchCode ; n++){
+					grouped.push(all[i-n]);
+				}
+				if(grouped.length <= 1) return;
+
+				grouped = grouped.reverse();
+
+				grouped.forEach((g, gi) => {
+					const thisClass = new Set(g.class?.split(' ') || []);
+					if(grouped[0].class?.includes('even')){
+						thisClass.add('even');
+					} else {
+						thisClass.delete('even');
+					}
+					g.class = Array.from(thisClass).join(" ");
+					gi && (g.isGrouped = true);
+				});
+				grouped[0].groupLength = grouped.length;
+			};
+
+			nomsData.items.forEach((row, i, all) => {
 				//console.log(typeof i.tickets)
-				i.tickets = i.tickets && i.tickets.length ? i.tickets.length : '';
+				userNameMapper(row);
+				dateMapper(row);
+				groupNoms(row, i, all);
+				row.tickets = row.tickets && row.tickets.length ? row.tickets.length : '';
 			});
 			
 			const emptyColumns = (() => {
@@ -119,6 +229,8 @@
 
 			//console.log(Object.keys(nomsData.items[0]))
 
+			handlebars.registerHelper('eq', (arg1, arg2, options) => arg1 === arg2);
+			
 			var template = handlebars.compile(source);
 			var result = template(data);
 			//console.log(result.slice(0,100));
