--- a/work/handlebars.html
+++ b/work/handlebars.html
@@ -28,7 +28,7 @@
 
 	<script type="module">
 		import handlebars from 'https://cdn.skypack.dev/handlebars';
-		import { importCSS, consoleHelper, htmlToElement } from './.tools/misc.mjs'
+		import { importCSS, consoleHelper, htmlToElement } from '../.tools/misc.mjs'
 		consoleHelper();
 		
 		console.log(`
