basic chat experiment: add placeholder

--- a/playground/chatter/chatter.html
+++ b/playground/chatter/chatter.html
@@ -15,7 +15,7 @@
 		<ul class="chat-history">
 			<li class="bot">Welcome!  Ask a question!</li>
 		</ul>
-		<input type="text" class="input-box">
+		<input type="text" class="input-box" placeholder="Type a question here to get started!">
 	</body>
 
 	<script src="chatter.js"></script>
