--- a/playground/encrypt-web-worker.html
+++ b/playground/encrypt-web-worker.html
@@ -1,140 +1,139 @@
 <!DOCTYPE html>
+<html>
+	<style>
 
-<style>
-
-	body {
-		font-size: 1em;
-		margin-top: 80px;
-	}
-
-	::selection {
-		background: #aaa;
-	}
-
-	ul {
-			list-style-type: none;
-			padding-inline-start: 0px;
-	}
-
-	li {
-		margin: auto;
-		margin-top: 10px;
-		background: #171717;
-		padding: 17px;
-		border-radius: 3px;
-		width: 550px;
-		min-width: 550px;
-		max-width: 550px;
-		padding-top: 9px;
-		color: #2f86ad;
-	}
-
-	.timeStamp {
-		float: right;
-		/* font-size: small; */
-		font-family: monospace;
-		color: white;
-		opacity: 0.3;
-	}
-
-	.messageId {
-		color: #d09d03;
-		/* font-weight: 600; */
-		margin-top: 0px;
-	}
-
-	.messageId:before {
-		content: '⟿ ';
-		font-weight: bold;
-	}
-	.result {
-		word-wrap: break-word;
-		white-space: pre-wrap;
-		word-break: keep-all;
-		font-style: italic;
-	}
-</style>
-
-
-<!--
-	ONLY FOR WORKER CODE!!
--->
-<script id="worker1" type="text/javascript">
-	function getWorker(){
-			function worker(){
-			// This is required for the jsencrypt library to work within the web worker
-			self.window = self;
-
-			self.importScripts('https://unpkg.com/jsencrypt@2.3.1/bin/jsencrypt.min.js');
-
-			let crypt = null
-			let privateKey = null
-
-			onmessage = function(e) {
-				const {
-					messageType, messageId = messageType, text, key,
-					private
-				} = e.data;
-				let result = 'unrecognized request';
-				switch (messageType) {
-					case 'generate-keys':
-						result = generateKeypair();
-						break;
-					case 'set-private-key':
-						result = setPrivateKey(private);
-						break;
-					case 'encrypt':
-						result = encrypt(text, key)
-						break
-					case 'decrypt':
-						result = decrypt(text)
-						break
-				}
-
-				postMessage({ messageId, result })
-			}
-
-			function generateKeypair () {
-				crypt = new JSEncrypt({default_key_size: 2056})
-				privateKey = crypt.getPrivateKey();
-				//console.log({ privateKey });
-				return crypt.getPublicKey()
-			}
-
-			function setPrivateKey(private){
-				privateKey = private;
-				crypt = new JSEncrypt();
-				crypt.setPrivateKey(private);
-				const public = crypt.getPublicKey();
-				return `${privateKey} \n\n${public}`;
-			}
-
-			function encrypt (content, publicKey) {
-				crypt.setKey(publicKey)
-				return crypt.encrypt(content)
-			}
-
-			function decrypt (content) {
-				crypt.setKey(privateKey)
-				return crypt.decrypt(content)
-			}
+		body {
+			font-size: 1em;
+			margin-top: 80px;
 		}
 
-		return worker
-			.toString()
-			.split(/\n/g)
-			.slice(1,-1)
-			.join('\n');
-	}
-</script>
+		::selection {
+			background: #aaa;
+		}
 
-<!--
-	^^^ ONLY FOR WORKER CODE!!
--->
+		ul {
+				list-style-type: none;
+				padding-inline-start: 0px;
+		}
 
-<script src="https://unpkg.com/js-sha256@0.9.0/src/sha256.js"></script>
+		li {
+			margin: auto;
+			margin-top: 10px;
+			background: #171717;
+			padding: 17px;
+			border-radius: 3px;
+			width: 550px;
+			min-width: 550px;
+			max-width: 550px;
+			padding-top: 9px;
+			color: #2f86ad;
+		}
 
-<script>
+		.timeStamp {
+			float: right;
+			/* font-size: small; */
+			font-family: monospace;
+			color: white;
+			opacity: 0.3;
+		}
+
+		.messageId {
+			color: #d09d03;
+			/* font-weight: 600; */
+			margin-top: 0px;
+		}
+
+		.messageId:before {
+			content: '⟿ ';
+			font-weight: bold;
+		}
+		.result {
+			word-wrap: break-word;
+			white-space: pre-wrap;
+			word-break: keep-all;
+			font-style: italic;
+		}
+	</style>
+
+	<!--
+		ONLY FOR WORKER CODE!!
+	-->
+	<script id="worker1" type="text/javascript">
+		function getWorker(){
+				function worker(){
+				// This is required for the jsencrypt library to work within the web worker
+				self.window = self;
+
+				self.importScripts('https://unpkg.com/jsencrypt@2.3.1/bin/jsencrypt.min.js');
+
+				let crypt = null
+				let privateKey = null
+
+				onmessage = function(e) {
+					const {
+						messageType, messageId = messageType, text, key,
+						private
+					} = e.data;
+					let result = 'unrecognized request';
+					switch (messageType) {
+						case 'generate-keys':
+							result = generateKeypair();
+							break;
+						case 'set-private-key':
+							result = setPrivateKey(private);
+							break;
+						case 'encrypt':
+							result = encrypt(text, key)
+							break
+						case 'decrypt':
+							result = decrypt(text)
+							break
+					}
+
+					postMessage({ messageId, result })
+				}
+
+				function generateKeypair () {
+					crypt = new JSEncrypt({default_key_size: 2056})
+					privateKey = crypt.getPrivateKey();
+					//console.log({ privateKey });
+					return crypt.getPublicKey()
+				}
+
+				function setPrivateKey(private){
+					privateKey = private;
+					crypt = new JSEncrypt();
+					crypt.setPrivateKey(private);
+					const public = crypt.getPublicKey();
+					return `${privateKey} \n\n${public}`;
+				}
+
+				function encrypt (content, publicKey) {
+					crypt.setKey(publicKey)
+					return crypt.encrypt(content)
+				}
+
+				function decrypt (content) {
+					crypt.setKey(privateKey)
+					return crypt.decrypt(content)
+				}
+			}
+
+			return worker
+				.toString()
+				.split(/\n/g)
+				.slice(1,-1)
+				.join('\n');
+		}
+	</script>
+
+	<!--
+		^^^ ONLY FOR WORKER CODE!!
+	-->
+
+	<script src="https://unpkg.com/js-sha256@0.9.0/src/sha256.js"></script>
+
+	<script>
 	const textToEncode = `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vehicula eget velit vel egestas. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam non commodo ligula.`;
 	const private = `-----BEGIN RSA PRIVATE KEY-----
 MIIEpwIBAAKCAQIAqnk7ra9a5OCVgXqYx/Cn6+bRPTJjJ117yzXpm1aT5H1hoVG9
@@ -290,3 +289,4 @@ expect: ${bestHash.hash.replace(/ /g, '')}
 	});
 
 </script>
+</html>
