chatter: style updates

--- a/playground/chatter/chatter.html
+++ b/playground/chatter/chatter.html
@@ -10,10 +10,12 @@
 		<link rel="stylesheet" href="chatter.css">
 	</head>
 	<body>
-		<ul class="chat-history">
-			<li class="bot">Welcome!  Ask a question!</li>
-		</ul>
-		<input type="text" class="input-box" placeholder="Type a question here to get started!">
+		<div class="window">
+			<ul class="chat-history">
+				<li class="bot">Welcome!  Ask a question!</li>
+			</ul>
+			<input type="text" class="input-box" placeholder="Type a question here to get started!">
+		</div>
 	</body>
 
 	<script src="chatter.js"></script>
