tower defense: screen-related

--- a/playground/tower.defense/tower.defense.html
+++ b/playground/tower.defense/tower.defense.html
@@ -10,7 +10,13 @@
 		<link rel="manifest" href="./pwa/manifest.json" />
 	</head>
 
-	<body></body>
+	<script src="td.screen.js" type="module"></script>
+
+	<body>
+		<div class="container">
+			<canvas></canvas>
+		</div>
+	</body>
 
 	<script>
 		window.towerX = 60;
