--- a/playground/tower.defense/tower.defense.html
+++ b/playground/tower.defense/tower.defense.html
@@ -19,11 +19,17 @@
 	</body>
 
 	<script>
+		if(document.URL.includes('::preview::')){
+			const container = document.querySelector('.container');
+			container.classList.add('dev');
+		}
+
 		window.towerX = 60;
+		window.towerColor1 = '#24b';
+		window.towerColor2 = '#934';
 
 		window.basicChar = {
 			type: 'attacker',
-			color: '#67b',
 			hp: 3000,
 			respawn: 40,
 			range: 100,
@@ -34,7 +40,6 @@
 
 		window.basicOppChar = {
 			type: 'defender',
-			color: '#b76',
 			hp: 3000,
 			respawn: 40,
 			range: 147,
@@ -52,5 +57,16 @@
 	-->
 
 </html>
+
+<!--
+from lerico, characters seem to be under 200x200 with many around 170 high and varying widths
+760x428 game dims from a screencap I saw, seems reasonable 
+
+heights zoomed in
+total - 400/1400(28.5%) (above tower) + 650/1400(46.4%) (tower - including shadow of 50px) + 350/1400(25%) (below tower)
+horizon line at 800/1400 from top
+character - about 350/1400 (25%)
+-->
+
 
 <!-- http://bit.ly/TowerDefenseGo -->
