--- a/playground/mixed-canvas/mixed-canvas.html
+++ b/playground/mixed-canvas/mixed-canvas.html
@@ -9,6 +9,44 @@
 		<link rel="stylesheet" href="mixed-canvas.css">
 	</head>
 
+	<script id="vertexShader" type="x-shader/x-vertex">
+		precision mediump float;
+		precision mediump int;
+
+		uniform mat4 modelViewMatrix; // optional
+		uniform mat4 projectionMatrix; // optional
+
+		attribute vec3 position;
+		attribute vec4 color;
+
+		varying vec3 vPosition;
+		varying vec4 vColor;
+
+		void main()	{
+			vPosition = position;
+			vColor = color;
+
+			gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+		}
+	</script>
+
+	<script id="fragmentShader" type="x-shader/x-fragment">
+		precision mediump float;
+		precision mediump int;
+
+		uniform float time;
+
+		varying vec3 vPosition;
+		varying vec4 vColor;
+
+		void main()	{
+			vec4 color = vec4( vColor );
+			color.r += sin( vPosition.x * 10.0 + time ) * 1.0;
+
+			gl_FragColor = color;
+		}
+	</script>
+
 	<body>
 		<canvas width="400" height="400"></canvas>
 	</body>
@@ -20,8 +58,77 @@
 		const canvas = new MixedCanvas('canvas');
 		const { loop, width, height } = canvas;
 
-		const geometry = new THREE.BoxGeometry( 0.2, 0.2, 0.2 );
-		const material = new THREE.MeshNormalMaterial();
+		const geometry = new THREE.BufferGeometry();
+		const vertexCount = 5 * 3;
+
+		const positions = [];
+		const colors = [];
+
+		const linesToArray = str => str
+			.split('\n').filter(x=>!!x).map(x => x.trim().split('  ').map(Number))
+		const vertices = linesToArray(`
+0  -0.525731  0.850651
+0.850651  0  0.525731
+0.850651  0  -0.525731
+-0.850651  0  -0.525731
+-0.850651  0  0.525731
+-0.525731  0.850651  0
+0.525731  0.850651  0
+0.525731  -0.850651  0
+-0.525731  -0.850651  0
+0  -0.525731  -0.850651
+0  0.525731  -0.850651
+0  0.525731  0.850651
+`);
+		const faces = linesToArray(`
+2  3  7
+2  8  3
+4  5  6
+5  4  9
+7  6  12
+6  7  11
+10  11  3
+11  10  4
+8  9  10
+9  8  1
+12  1  2
+1  12  5
+7  3  11
+2  7  12
+4  6  11
+6  5  12
+3  8  10
+8  2  1
+4  10  9
+5  9  1
+`).flat();
+
+		const shape = faces.reverse().map(x => vertices[x-1]);
+		for (let vt in shape){
+			positions.push(...shape[vt].map(x=>x*0.2));
+
+			// adding r,g,b,a
+			colors.push( Math.random() * 200 );
+			colors.push( Math.random() * 200 );
+			colors.push( Math.random() * 200 );
+			colors.push( 245 );
+		}
+
+		const positionAttribute = new THREE.Float32BufferAttribute( positions, 3 );
+		const colorAttribute = new THREE.Uint8BufferAttribute( colors, 4 );
+		colorAttribute.normalized = true;
+		geometry.setAttribute( 'position', positionAttribute );
+		geometry.setAttribute( 'color', colorAttribute );
+		const material = new THREE.RawShaderMaterial( {
+			uniforms: {
+				time: { value: 1.0 }
+			},
+			vertexShader: document.getElementById( 'vertexShader' ).textContent,
+			fragmentShader: document.getElementById( 'fragmentShader' ).textContent,
+			side: THREE.DoubleSide,
+			transparent: true
+		});
+
 		const mesh = new THREE.Mesh( geometry, material );
 		canvas.add3d( mesh );
 
@@ -40,24 +147,12 @@
 		};
 
 		const tick = (time) => {
-			mesh.rotation.x = time / 2000;
-			mesh.rotation.y = time / 1000;
+			mesh.rotation.x = time / 8000;
+			mesh.rotation.y = time / 4000;
+			mesh.material.uniforms.time.value = time * 0.00005;
 		};
 
-		const gameLoop = (() => {
-			const frameTime = 15;
-			let lastRender = 0;
-
-			return (time) => {
-				const timeDiff = time-lastRender;
-				if(frameTime > timeDiff) return;
-				lastRender = time;
-				tick(time);
-				render();
-			};
-		})();
-
-		loop(gameLoop);
+		loop(30,tick, render);
 	</script>
 
 </html>
