mixed canvas: wireframe line width

--- a/playground/mixed-canvas/mixed-canvas.html
+++ b/playground/mixed-canvas/mixed-canvas.html
@@ -155,7 +155,7 @@
 		const render = () => {
 			canvas.clear();
 			canvas.draw3d();
-			canvas.fillText("This is a 2D canvas", width/2, textOffset);
+			canvas.fillText("Mixed: a 2D canvas", width/2, textOffset);
 			canvas.fillText("...with 3D content!", width/2, height-textOffset);
 		};
 
