--- a/.templates/md.html
+++ b/.templates/md.html
@@ -100,6 +100,7 @@ useDefault: false
 		border: 1px dotted #999;
 		border-top: 0px;
 		margin-left: -30px;
+		margin-right: -30px;
 		background-color: transparent;
 	}
 
@@ -292,6 +293,9 @@ useDefault: false
 </script>
 <script id="svgbob-wasm">
 (async () => {
+	const mdInputEl = document.getElementById('markdown-input');
+	if(!mdInputEl.textContent.includes('ascii-diagram')) return;
+
 	let wasm;
 	window.svgbob_convert = async function convert_string(data) {
 		while(!wasm){ await delay(1000); }
@@ -456,7 +460,7 @@ useDefault: false
 			})()
 			
 
-			if (templateInput.includes('<!-- no-select -->')) {
+			if (!templateInput.includes('<!-- highlighter -->')) {
 				return;
 			}
 
