--- a/.templates/apl.html
+++ b/.templates/apl.html
@@ -136,7 +136,7 @@
 				return
 			}
 			document.body.innerHTML += `
-			<div style="white-space: pre;font-family: monospace;">${result}</div>
+			<div style="white-space: pre;font-family: monospace;line-height: 1.08em;overflow:auto;">${result}</div>
 			`;
 		};
 
