kalman filter: graph styles

--- a/playground/kalman/kalman.html
+++ b/playground/kalman/kalman.html
@@ -10,6 +10,9 @@
 		<link rel="stylesheet" href="kalman.css">
 	</head>
 
+	<style>
+	</style>
+
 	<body>
 		<div id="reality" class="graph"></div>
 		<div id="sensor1" class="graph"></div>
@@ -19,6 +22,10 @@
 		<div id="error" class="graph"></div>
 	</body>
 
+	<script src="kalman.ui.js" type="module"></script>
 	<script src="kalman.js" type="module"></script>
+
+	<script>
+	</script>
 
 </html>
