--- a/playground/kalman/kalman.html
+++ b/playground/kalman/kalman.html
@@ -26,6 +26,12 @@
 	<script src="kalman.js" type="module"></script>
 
 	<script>
+		//TODO: add controls like here:
+		//https://benwinding.github.io/kalmanjs-examples/examples/demo2-vue.html
+		// more info: https://www.wouterbulten.nl/blog/tech/lightweight-javascript-library-for-noise-filtering/
+		
+		//TODO: listen to wave sources & analyse content
+		//https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API/Visualizations_with_Web_Audio_API
 	</script>
 
 </html>
