investing experiment + game prog notes

--- a/playground/tower.defense/tower.defense.html
+++ b/playground/tower.defense/tower.defense.html
@@ -74,6 +74,14 @@ tower bottom - 600px from top
 
 character - 200px
 
+----
+blaster master - https://www.spriters-resource.com/resources/sheets/113/116445.png?updated=1557048859
+dry bones -https://www.spriters-resource.com/resources/sheets/8/7871.png?updated=1460953762
+
+the dry bones sprite sheet gets me thinking it would be nice to make a bones system
+https://cdn.rawgit.com/flyover/spriter.ts/master/demo/index.html
+http://dragonbones.com/en/download.html#runLibrary
+
 -->
 
 
