--- a/playground/bookmarks/bookmarks.html
+++ b/playground/bookmarks/bookmarks.html
@@ -15,7 +15,7 @@
 			margin: 4em 2em; color: #ccc; font: 12px sans-serif;
 			background: #222; display: flex; justify-content: center;
 		}
-		.container { max-width: 900px; }
+		.container { width: 90%; }
 		a { color: #26a69a; }
 		.link { background: #111; padding: 0.5em 1em 1em; }
 		.link + .link { margin-top: 0.5em; }
