--- a/playground/iframe-drag/iframe-drag.html
+++ b/playground/iframe-drag/iframe-drag.html
@@ -14,8 +14,8 @@
 
 	<body>
 		<div class="container">
-			<iframe id="frameOne" src='child1.html'></iframe>
-			<iframe id="frameTwo" src='child2.html'></iframe>
+			<iframe id="frameOne" src='tree.html'></iframe>
+			<iframe id="frameTwo" src='editor.html'></iframe>
 		</div>
 		<pre id="desc"></pre>
 	</body>
