python notes, mixed canvas show teapot instead

--- a/.templates/py.html
+++ b/.templates/py.html
@@ -4,6 +4,14 @@ skulpt
 
 also check out https://hacks.mozilla.org/2019/04/pyodide-bringing-the-scientific-python-stack-to-the-browser/
 
+also:
+brython - https://brython.info/
+pypy.js - http://pypyjs.org/
+
+maybe also:
+https://github.com/atsepkov/RapydScript
+https://github.com/rusthon/Rusthon (formerly PythonJS)
+
 -->
 <html>
 
