--- a/playground/mixed-canvas/mixed-canvas.html
+++ b/playground/mixed-canvas/mixed-canvas.html
@@ -86,6 +86,7 @@
 		
 		(async () => {
 			const obj = await ObjParser('./teapot.obj');
+			// const obj = await ObjParser('./icosohedron.obj');
 			const canvas = new MixedCanvas('canvas');
 			const { loop, width, height } = canvas;
 
