preview-related cleanup

--- a/.templates/d3-graph.html
+++ b/.templates/d3-graph.html
@@ -407,7 +407,7 @@ arrows for links: http://bl.ocks.org/rkirsling/5001347
 		};
 		const query = getQueryParams();
 		if(!query.chrome || query.chrome !== "false"){
-			document.body.classList.add('withChrome');
+			//document.body.classList.add('withChrome');
 		};
 		const mdInputEl = document.getElementById('markdown-input');
 		let templateInput = mdInputEl.innerHTML
