--- a/playground/bookmarks/bookmarks.html
+++ b/playground/bookmarks/bookmarks.html
@@ -12,7 +12,7 @@
 
 	<style>
 		body {
-			margin: 4em 2em; color: #ccc; font: 12px sans-serif;
+			margin: 2em; color: #ccc; font: 12px sans-serif;
 			background: #222; display: flex; justify-content: center;
 		}
 		.container { width: 90%; }
