markdown template tweaking

--- a/.templates/md.html
+++ b/.templates/md.html
@@ -57,7 +57,7 @@ useDefault: false
 		overflow: auto;
 		padding: 30px;
 		margin-bottom: 20px;
-		padding-top: 20px;
+		padding-top: 0;
 		padding-bottom: 40px;
 		overflow-x: hidden;
 	}
