--- a/.templates/ink.html
+++ b/.templates/ink.html
@@ -37,19 +37,6 @@ https://play.dotink.co/
 			font-family: monospace;
 		}
 	</style>
-
-
-	<example_code style="display:none;">
-<!--
-11 11 ⍴ ⍳ 121
--->
-	</example_code>
-
-	<code_in>
-<!--
-{{template_input}}
--->
-	</code_in>
 	<body></body>
 </html>
 
@@ -9085,51 +9072,14 @@ window.run = (code, stdout) => {
 
 <script>
 const someInk = `
-
-\`
-https://github.com/thesephist/ink
-
-https://blog.gopheracademy.com/advent-2018/llvm-ir-and-go/
-https://dev.to/enbis/generate-and-run-webassembly-code-using-go-4fbp
-
-ideas on how to get this to work:
-
-1) use go on server compile the interpreter to llvm ir -> wasm or directly to wasm
-
-2) run ink code in browser using go template
-
-
-https://play.dotink.co/
-
-
-\`
-
-\` fibonacci sequence generator \`
-
-memo := [0, 1]
-fibMemo := n => (
-	memo.(n) :: {
-		() -> memo.(n) := fibMemo(n - 1) + fibMemo(n - 2)
-	}
-	memo.(n)
-)
-
-fibo := n => each(
-	range(0, n + 1, 1)
-	n => out(fibMemo(n) + ' ')
-)
-
-fibo(9), log('\n')
-
+{{template_input}}
 `;
 
-
 run(someInk, (text) => {
-	console.log(text);
+	//console.log(text);
 	document.body.innerHTML += `
 		<div>${text}</div>
 	`;
 });
-
 
 </script>
