ml template - add notes

--- a/.templates/ml.html
+++ b/.templates/ml.html
@@ -89,4 +89,8 @@
 
 https://github.com/reasonml/reasonml.github.io/tree/master/js
 
+https://reasonml.github.io/en/try
+
+https://rescript-lang.org/try (ML goes away completely?)
+
 -->
