ml fix template error output

--- a/.templates/ml.html
+++ b/.templates/ml.html
@@ -69,7 +69,7 @@
 
 			//logJSON(output)
 			if(js_error_msg){
-				outputPre.innerHTML += x;
+				outputPre.innerHTML += js_error_msg;
 				return;
 			}
 			const run = (code) => {
