wave function collapse

--- a/playground/wave-function-collapse/wave-function.html
+++ b/playground/wave-function-collapse/wave-function.html
@@ -1,18 +1,17 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Bookmarks</title>
+		<title>Wave Function Collapse</title>
 		<meta charset="utf-8">
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
-		<link rel="stylesheet" href="bookmarks.css">
+		<link rel="stylesheet" href="wave-function.css">
 	</head>
 
 	<body>
 	</body>
 
-	<script type="module" src="bookmarks.js"></script>
-
+	<script type="module" src="wave-function.js"></script>
 </html>
